# dns-resolver

./: .gitignore  Cargo.toml  Makefile  test-script.py
scripts/: e2e_dig.py  e2e_dig.sh
src/: cache_util.rs  lib.rs
src/resolver/: iterative.rs  mod.rs  recursive.rs  tests.rs  transport.rs  types.rs
